<resources>
    <string name="app_name">Cumii</string>

    <!-- Fixes bug -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- drawer -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_camera">Camera</string>
    <string name="action_call">Call</string>

    <string name="nav_edit_profile">Edit Profile</string>
    <string name="nav_privacy">Privacy</string>
    <string name="nav_terms_and_conditions">Terms and Conditions</string>
    <string name="nav_logout">Logout</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_empty">Email field is empty</string>
    <string name="error_password_empty">Password field is empty</string>
    <string name="error_login_internet">Login failed. Check internet connection.</string>
    <string name="error_network_retry">Network error. Retry?</string>
    <string name="error_no_members">No members found</string>
    <string name="error_not_events">No events</string>
    <string name="error_no_gateways">No gateways</string>
    <string name="error_no_smart_devices">No smart devices</string>

    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="title_devices">Devices</string>
    <string name="title_control">Control</string>

    <string name="label_gateway">Gateway</string>
    <string name="label_smart_device">Smart Device</string>
    <string name="label_online">Online</string>
    <string name="label_offline">Offline</string>
    <string name="label_today_activity">Today Activity</string>
    <string name="label_median_wakeup_time">Median Wakeup Time</string>
    <string name="label_median_sleep_time">Median Sleep Time</string>
    <string name="label_day_activity">Day Activity</string>
    <string name="label_night_activity">Night Activity</string>
    <string name="label_activity_level">Activity Level</string>
    <string name="label_usually_inactive_for">Usually inactive for</string>
    <string name="label_longest_inactive_period">Longest inactive period</string>
    <string name="label_of_the_time">of the time</string>
    <string name="label_day_bathroom_activity">Day Bathroom Activity</string>
    <string name="label_night_bathroom_activity">Night Bathroom Activity</string>
    <string name="label_used">Used</string>
    <string name="label_times">times</string>
    <string name="label_duration">Duration (mins)</string>
    <string name="label_longest">Longest</string>
    <string name="label_usual">Usual</string>
    <string name="label_shortest">Shortest</string>
    <string name="label_energy_usage">Energy Usage</string>
    <string name="label_water_usage">Water Usage</string>
    <string name="label_today">Today</string>
    <string name="label_this_week">This Week</string>
    <string name="label_this_month">This Month</string>
    <string name="label_kwh">kWh</string>
    <string name="label_l">L</string>
    <string name="label_sgd">S$</string>
    <string name="label_actions">Actions</string>
    <string name="label_enable_away_mode">Enable Away Mode</string>
    <string name="label_enable_away_mode_desc">Temporary disable the alert until the next activity is detected</string>
    <string name="label_disable_alert">Disable Alert</string>
    <string name="label_disable_alert_desc">Stop receiving this alert until alert is armed again</string>
    <string name="label_panic">Panic</string>

    <string name="message_call_out">Call %1$s?</string>
    <string name="message_panic">%1$s is in panic. Please respond!</string>
    <string name="message_away_mode">This alert will be disabled until the next activity is detected</string>
    <string name="message_disarm_mode">You will not receive this alert</string>

    <!-- DateUtil -->
    <string name="date_a_few_seconds_ago">a few seconds ago</string>
    <plurals name="date_minute_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <string name="date_day">%1$s at %2$s</string>
    <string name="date_today">Today</string>

    <!-- Profile -->
    <string name="profile_activity_wakeup_time">08:00 AM</string>
    <string name="profile_activity_sleep_time">10:00 PM</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="jsw_label_connected">Connected</string>
    <string name="jsw_label_connecting">Connecting</string>
    <string name="jsw_label_disconnected">Disconnected</string>
    <string name="jsw_label_connect_failed">Failed to connect</string>
    <string name="jsw_label_connect_wrong_did">Wrong DID</string>
    <string name="jsw_label_connect_wrong_password">Wrong security code</string>
    <string name="jsw_label_camera">Camera</string>

    <string name="jsw_error_no_cameras_added">No cameras added</string>

    <!-- FCM -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_maps">Map</string>


    <!-- ZWave -->
    <string name="zwave_format_percentage">%1$.1f %%</string>
    <string name="zwave_format_celsius">%1$.1f \u2103</string>
    <string name="zwave_format_fahrenheit">%1$.1f \u2109</string>
    <string name="zwave_format_lux">%1$.1f lx</string>
    <string name="zwave_format_absolute_humidity">%1$.1f g/\u33a5</string>

    <string name="zwave_label_on">ON</string>
    <string name="zwave_label_off">OFF</string>
    <string name="zwave_label_no_data">No data</string>

    <string name="zwave_unit_kwh">kWh</string>
    <string name="zwave_unit_kVAh">kVAh</string>
    <string name="zwave_unit_W">W</string>
    <string name="zwave_unit_pulse_count">Pulse count</string>
    <string name="zwave_unit_V">V</string>
    <string name="zwave_unit_A">A</string>
    <string name="zwave_unit_power_factor">Power factor</string>

    <string name="zwave_arm">Arm</string>
    <string name="zwave_disarm">Disarm</string>
    <string name="zwave_home">Home</string>
</resources>
